--- a/css/estilo.css
+++ b/css/estilo.css
@@ -215,7 +215,7 @@ body {
   position: relative; }
 
 .card:hover, .card-shadow:hover {
-  background-color: #b5e785; }
+  background-color: #a1a79b; }
 
 .card-footer {
   position: absolute;
@@ -230,7 +230,7 @@ body {
   width: 300px;
   height: 350px;
   position: relative;
-  background-image: linear-gradient(to bottom, #b5e785, #c6df99); }
+  background-image: linear-gradient(to bottom, #b3b9ae, #c6df99); }
 
 .card2:hover {
   transform: scale(1, 1.2); }
@@ -314,3 +314,11 @@ body {
   .tarjeta__parrafo {
     line-height: 28px;
     font-size: 1rem; }
+
+.quienessomos {
+  text-align: left; }
+
+.modal-body {
+  font-family: 'Nunito'; }
+  .modal-body p {
+    font-size: x-large; }
