--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -243,7 +243,7 @@ body{
         position: relative;
     }
     .card:hover{
-        background-color: rgb(181, 231, 133);
+        background-color: rgb(161, 167, 155);
     }
     .card-footer{
         position: absolute;
@@ -257,7 +257,7 @@ body{
         width: 300px;
         height: 350px;
         position: relative;
-        background-image: linear-gradient(to bottom, rgb(181, 231, 133) , rgb(198, 223, 153));
+        background-image: linear-gradient(to bottom, rgb(179, 185, 174) , rgb(198, 223, 153));
     }
     .card2:hover{
         transform: scale(1,1.2);
@@ -368,4 +368,15 @@ body{
         line-height: 28px;
         font-size: 1rem;
     }
+}
+.quienessomos{
+    text-align: left;
+}
+.modal-body{
+    font-family: 'Nunito';
+        p{
+            font-size: x-large;
+            
+
+        }
 }
