--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -340,10 +340,10 @@ body{
             }
       }
       .tarjeta {
-        background-color: #d7f0bb;
+        background-image:url(https://us.123rf.com/450wm/nataliyabykova/nataliyabykova1405/nataliyabykova140500007/30210337-inusual-fondo-en-colores-pastel-multicolor-con-la-luz-rosa-al-azar-manchas-azules-verdes-y-p%C3%BArpuras-abst.jpg?ver=6);
         border-radius: 15px;
         padding: 20px;
-        display: flex;
+        
         align-items: center;
         position: relative;
         margin-bottom: 50px;
